# payvest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  README.md  entrypoint.sh  gunicorn.conf.py  pyproject.toml
.github/workflows/: main_payvest.yml  python-app.yml  release_payvest.yml
app/: __init__.py  routes.py
app/models/: constants.py  finance.py
app/static/: app.js  chart.js  chartjs-plugin-datalabels.min.js  styles.css
app/templates/: base.html  index.html  results.html
tests/: test_advanced_features.py  test_finance.py  test_routes.py
